--- a/index.html
+++ b/index.html
@@ -10,12 +10,12 @@
 
     <div class="container">
         <div class="destination-container">
-            <div class="destination" id="belize">
-                <h2>Belize</h2>
+            <div class="destination" id="harare">
+                <h2>harare</h2>
             </div>
 
-            <div class="destination" id="barcelona">
-                <h2>Barcelona</h2>
+            <div class="destination" id="gweru">
+                <h2>gweru</h2>
             </div>
         </div>
     </div>
